[tool.poetry]
name = "wind-whisper"
version = "0.1.0"
description = ""
authors = ["Dikson Santos <diksonfer@gmail.com>"]
readme = "README.md"
packages = [{include = "wind_whisper"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
numpy = "^1.25.0"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
