[tool.poetry]
name = "wind-whisper"
version = "0.1.0"
description = ""
authors = ["Dikson Santos <diksonfer@gmail.com>"]
readme = "README.md"
packages = [{include = "wind_whisper"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.2"
numpy = "^1.24"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
sktime = "^0.19.1"
statsmodels = "^0.14.0"
pmdarima = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
